--- a/Entregable_ejemplo1.html
+++ b/Entregable_ejemplo1.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Evelia Coss" />
 
-<meta name="date" content="2024-11-21" />
+<meta name="date" content="2025-02-27" />
 
 <title>Ejemplo del entregable</title>
 
@@ -352,7 +352,7 @@ display: none;
 
 <h1 class="title toc-ignore">Ejemplo del entregable</h1>
 <h4 class="author">Evelia Coss</h4>
-<h4 class="date">2024-11-21</h4>
+<h4 class="date">2025-02-27</h4>
 
 </div>
 
@@ -360,7 +360,11 @@ display: none;
 <p>Descripción del equipo:</p>
 <ul>
 <li><strong>Equipo:</strong> numero de equipo</li>
-<li><strong>Integrantes:</strong> Nombres completos</li>
+<li><strong>Integrantes:</strong> Nombres completos y nombre del usuario
+en el cluster,
+<ul>
+<li>ejemplo: Evelia Lorena Coss-Navarrete (ecoss)</li>
+</ul></li>
 <li><strong>Correos electrónicos de los integrantes</strong></li>
 </ul>
 <p>Descripción de los datos:</p>
